locale-en has added

--- a/myaccount/selfcare_module/views/clients/activateuser.html
+++ b/myaccount/selfcare_module/views/clients/activateuser.html
@@ -1,49 +1,49 @@
 <div ng-controller="ActivateUserController">
 <br/>
 <div class="row" ng-show="isRegPage">
-	<span style="margin-left:100px;" class="animated wobble">Registration</span>
-	<span style="margin-left:250px;">Package Selection</span>
-	<span style="margin-left:240px;">Payment</span><br/>
-	<img class="animated tada"style="margin-left:110px; alt="Registration" src="./selfcare_module/images/registration.jpg" width="50px;">
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
+	<span style="margin-left:100px;" class="animated wobble">{{'header.registation'|translate}}</span>
+	<span style="margin-left:250px;">{{'header.package.selection'|translate}}</span>
+	<span style="margin-left:240px;">{{'header.payment'|translate}}</span><br/>
+	<img class="animated tada"style="margin-left:110px;" alt="{{'header.registation'|translate}}" src="./selfcare_module/images/registration.jpg" width="50px;">
+	<img style="margin-left:280px;" alt="{{'header.package.selection'|translate}}" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
+	<img style="margin-left:280px;" alt="{{'header.payment'|translate}}" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
 	<img class="animated pulse" style="margin-left:110px;margin-top:-28px" alt="ok" src="./selfcare_module/images/checkbox.png" width="40px;">
 </div>
 <div class="row" ng-show="isOrderPage">
-	<span  style="margin-left:100px;">Registration</span>
-	<span class="animated wobble" style="margin-left:250px;">Package Selection</span>
-	<span style="margin-left:240px;">Payment</span><br/>
-	<img style="margin-left:110px; alt="Registration" src="./selfcare_module/images/registration.jpg" width="50px;">
-	<img class="animated wobble" style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
+	<span  style="margin-left:100px;">{{'header.registation'|translate}}</span>
+	<span class="animated wobble" style="margin-left:250px;">{{'header.package.selection'|translate}}</span>
+	<span style="margin-left:240px;">{{'header.payment'|translate}}</span><br/>
+	<img style="margin-left:110px;" alt="{{'header.registation'|translate}}" src="./selfcare_module/images/registration.jpg" width="50px;">
+	<img class="animated wobble" style="margin-left:280px;" alt="{{'header.package.selection'|translate}}" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
+	<img style="margin-left:280px;" alt="{{'header.payment'|translate}}" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
 	<img class="animated pulse" style="margin-left:450px;margin-top:-28px" alt="ok" src="./selfcare_module/images/checkbox.png" width="40px;">
 </div>
 <div class="row" ng-show="isPaymentPage">
-	<span style="margin-left:100px;">Registration</span>
-	<span style="margin-left:250px;">Package Selection</span>
-	<span class="animated wobble" style="margin-left:240px;">Payment</span><br/>
-	<img style="margin-left:110px; alt="Registration" src="./selfcare_module/images/registration.jpg" width="50px;">
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
-	<img class="animated wobble" style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
+	<span style="margin-left:100px;">{{'header.registation'|translate}}</span>
+	<span style="margin-left:250px;">{{'header.package.selection'|translate}}</span>
+	<span class="animated wobble" style="margin-left:240px;">{{'header.payment'|translate}}</span><br/>
+	<img style="margin-left:110px;" alt="{{'header.registation'|translate}}" src="./selfcare_module/images/registration.jpg" width="50px;">
+	<img style="margin-left:280px;" alt="{{'header.package.selection'|translate}}" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
+	<img class="animated wobble" style="margin-left:280px;" alt="{{'header.payment'|translate}}" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
 	<img class="animated pulse" style="margin-left:790px;margin-top:-28px" alt="ok" src="./selfcare_module/images/checkbox.png" width="40px;">
 </div>
 <div ng-show="isRedirectToDalpay">
 <div class="alert alert-info animated pulse" role="alert">
 	<img style="margin-left:400px;" alt="Loading.." ng-src="./selfcare_module/images/loader_circle.gif" width="20px"/>
-         <strong> Redirecting To dalpay</strong>
+         <strong>{{'title.redirecting.dalpay'|translate}}</strong>
 		</div>
 </div>
  		<form name="activeForm" novalidate="" class="form-horizontal">
  			<div class="control-group" ng-show="isActive==true" style="margin-top:50px;">
 				 <div class="alert alert-success animated tada" role="alert" >
-		         	<strong>Your Account is now Active.You may now 
-							 <a ng-click="registrationLinkFun()" class="alert-link" style="color:#000000;">Register</a></strong>
+		         	<strong>{{'title.account.active'|translate}}
+							 <a ng-click="registrationLinkFun()" class="alert-link" style="color:#000000;">{{'link.register'|translate}}</a></strong>
 				</div>
 			</div>
 			<div class="control-group" ng-show="isAlreadyActive==true" style="margin-top:50px;">
 				<div class="alert alert-info animated tada" role="alert" >
-		         	<strong>Your Account is Already in Active.You may now  
-							 <a ng-click="goToSignInPageFun()" class="alert-link" style="color:#000000;">Sign In</a></strong>
+		         	<strong>{{'title.account.activated.signin'|translate}} 
+							 <a ng-click="goToSignInPageFun()" class="alert-link" style="color:#000000;">{{'label.signin'|translate}}</a></strong>
 				</div>
 			</div>
 		</form>
@@ -60,12 +60,12 @@
 	       		<tr>
 	       			<td>
             			<div class="control-group">
-            				<label class="control-label">{{'label.fullname' | translate}}&nbsp;<span class="required">*</span></label>
+            				<label class="control-label">{{'label.customer.name' | translate}}&nbsp;<span class="required">*</span></label>
             				<div class="controls">
-            					<input ng-autofocus="true" name="fullName" type="text" data-ng-model="formData.fullName" placeholder= "Full Name" ng-pattern="/^[a-zA-Z0-9\-\&\s]+$/" required ng-minlength=3 late-Validate><br/>
+            					<input ng-autofocus="true" name="fullName" type="text" data-ng-model="formData.fullName" placeholder= "{{'label.customer.name' | translate}}" ng-pattern="/^[a-zA-Z0-9\-\&\s]+$/" required ng-minlength=3 late-Validate><br/>
             					<span  ng-show="regSuccessForm.fullName.$invalid">
-				                	<small class="error" ng-show="regSuccessForm.fullName.$error.pattern">alphanumeric and spaces only!</small>
-				                    <small class="error" ng-show="regSuccessForm.fullName.$error.minlength && !regSuccessForm.fullName.$error.req">Name is required at least 3 characters</small>
+				                	<small class="error" ng-show="regSuccessForm.fullName.$error.pattern">{{'form.error.alphanumeric'|translate}}</small>
+				                    <small class="error" ng-show="regSuccessForm.fullName.$error.minlength && !regSuccessForm.fullName.$error.req">{{'form.error.name.characters.atleast'|translate}}</small>
 				                </span>
             				</div>
         				 </div>
@@ -75,10 +75,12 @@
             			<div class="control-group">
             				<label class="control-label">{{'label.mobilenumber' | translate}}&nbsp;<span class="required">*</span></label>
             				<div class="controls">
-            					<input name="phone" type="text" data-ng-model="formData.mobileNo" placeholder= "Mobile Number"
+            					<input name="phone" type="text" data-ng-model="formData.mobileNo" placeholder= "{{'label.mobilenumber' | translate}}" ng-minlength="7" ng-maxlength="15"
             							ng-pattern="/^(?!0+$)(?!1+$)(?!2+$)(?!3+$)(?!4+$)(?!5+$)(?!6+$)(?!7+$)(?!8+$)(?!9+$)\d{1,15}$/" required  late-Validate/><br/>
             					 <span ng-show="regSuccessForm.phone.$dirty && regSuccessForm.phone.$invalid">
-				        			<small class="error" ng-show="regSuccessForm.phone.$error.pattern">wrong input or accepts only digits !</small>
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.pattern">{{'form.error.number'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.minlength">{{'form.error.number.digits.atleast'|translate}}</small>
+				        			<small class="error" ng-show="regSuccessForm.phone.$error.maxlength">{{'form.error.number.digits.atleast'|translate}}</small>
 				    			</span>
             				</div>
         				 </div>
@@ -88,9 +90,9 @@
 	       		<tr>
 	       			<td>
             			<div class="control-group">
-                            <label class="control-label" for="address">Address&nbsp;<span class="required">*</span></label>
+                            <label class="control-label" for="address">{{ 'label.address' | translate }}&nbsp;<span class="required">*</span></label>
                              <div class="controls">
-    	                        <input type="text" ng-model="formData.address" name="address" placeholder= "Enter Address" required late-Validate/>
+    	                        <input type="text" ng-model="formData.address" name="address" placeholder= "{{ 'placeholder.enter.address' | translate }}" required late-Validate/>
                              </div>
                         </div>	
 	         				 
@@ -101,13 +103,8 @@
 				              <div class="controls">
 				              <select ng-model="formData.city"  ng-options="city as city for city in cities" 
 				              		   ng-change="getStateAndCountry(formData.city)" required>
-				              		   <option value="">--select--</option>
+				              		   <option value="">--{{'label.select'|translate}},--</option>
 				              </select>
-				               <!--  <input type="text" id="city" name="city" ng-model="formData.city" list ="citylist" placeholder= "Serach for City"
-				                										 ng-change="getStateAndCountry(formData.city)" required /> -->
-		           				 <!-- <datalist id="citylist">
-		                   				<option  data-ng-repeat="city in cities" value="{{city}}">
-		           				 </datalist> -->
 				              </div>
            				 </div>
 	       			</td>
@@ -115,9 +112,9 @@
 	       		<tr>
 	       			<td>
             			<div class="control-group">
-                            <label class="control-label" for="zipcode">Zip Code&nbsp;<span class="required">*</span></label>
+                            <label class="control-label" for="zipcode">{{ 'label.zipcode' | translate }}&nbsp;<span class="required">*</span></label>
                              <div class="controls">
-    	                        <input type="text" ng-model="formData.zipcode" name="zipcode" placeholder= "Enter Zipcode" required late-Validate/>
+    	                        <input type="text" ng-model="formData.zipcode" name="zipcode" placeholder= "{{ 'placeholder.enter.zipcode' | translate }}" required late-Validate/>
                              </div>
                         </div>	
 	         				 
@@ -128,7 +125,7 @@
             			<div class="control-group" ng-show="isDeviceEnabled==true">
                             <label class="control-label" for="serialNumber">{{ 'label.device' | translate }}&nbsp;<span class="required">*</span></label>
                              <div class="controls">
-    	                        <input type="text" ng-model="formData.deviceNo" name="serialNumber" placeholder= "Enter Device"/>
+    	                        <input type="text" ng-model="formData.deviceNo" name="serialNumber" placeholder= "{{ 'placeholder.enter.device' | translate }}"/>
                              </div>
                         </div>	
 	         				 
@@ -137,13 +134,13 @@
 	       	</table>
 	       	<div class="offset3">
 	       		 <button ng-click="nextBtnFun()" class="btn btn-primary pull-right" 
-				 		ng-disabled="!regSuccessForm.$valid">Next</button>
+				 		ng-disabled="!regSuccessForm.$valid">{{'btn.next' | translate}}<i class="icon-circle-arrow-right icon-white"></i></button>
 	        </div>
 	       </fieldset>
 	</form>
 	         <div ng-show="isOrderPage">
 	        <div class="animated bounce">
-	       	<h3>Packages</h3>
+	       	<h3>{{'header.packages'|translate}}</h3>
 	      		<div  style="margin-left:50px;">
 		      <tabset horizontal="true" type="pills">
 			    <tab heading="{{plan.planCode}}" ng-repeat="plan in plansData">
@@ -151,10 +148,10 @@
 			    	<div class="cust-body animated fadeInUp">
 			    		<span style="color:#0088cc;font-size:2.5em;">{{contractData.duration}}</span>
 			    		<span class="pull-right">
-			    			<sup class="sup animated pulse">Rs.</sup>
+			    			<sup class="sup animated pulse">{{'symbol.price'|translate}}</sup>
 			    			<span class="dollars animated pulse">{{contractData.price}}</span>
 			    			<a class="btn btn-primary cust-btn animated swing" 
-			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">Book Order</a>
+			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">{{'label.book.order'|translate}}</a>
 			    		</span>
 			    	 </div>
 			       </div>
@@ -168,7 +165,7 @@
 			    				<a class="btn btn-primary cust-btn animated swing" 
 			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">Book Order</a>
 			    				<span class="dollars animated pulse">{{contractData.price}}</span>
-			    				<span class="sup animated pulse">Rs.</span>
+			    				<span class="sup animated pulse">$</span>
 			    			</td>
 			    		  </tr>
 			    		</tbody>
@@ -176,7 +173,8 @@
 			    </tab>
 			  </tabset>
 		    </div> 
-		   </div>
+		   </div><br/>
+	       <button ng-click="previousBtnFun()" class="btn btn-primary pull-left"><i class="icon-circle-arrow-left icon-white"></i>{{'btn.previous' | translate}}</button>
 	   </div>
 	<form name="paymentBtnForm" novalidate="" class="form-horizontal well" ng-show="isPaymentPage">
 		<br>
@@ -186,19 +184,19 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 		<fieldset class="animated bounce">
-			<h3 style="padding-left:50px;">Payment Page</h3>
+			<h3 style="padding-left:50px;">{{'label.payment.page'|translate}}</h3>
 	 	 <div class="row paddedleft" style="margin-left:200px;">
 			<table width="100%">
 				<tr>
-					<td width="30%"><strong>Package Name</strong></td>
+					<td width="30%"><strong>{{'header.package.name'|translate}}</strong></td>
 					<td width="70%" class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planName}}</td>
 				</tr>
 				<tr>
-					<td><strong>Contract Period<s/trong></td>
+					<td><strong>{{'header.contract.period'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{duration}}</td>
 				</tr>
 				<tr>
-					<td><strong>Price</strong></td>
+					<td><strong>{{'header.price'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planAmount}}</td>
 				</tr>
 				
@@ -209,7 +207,7 @@
 	       			<td>
             			<div class="control-group">
             				<div class="controls">
-            					<input type="radio" name="selectType" checked/>&nbsp;Dalpay
+            					<input type="radio" name="selectType" checked/>&nbsp;{{'label.dalpay'|translate}}
             				</div>
         				 </div>
 	         				 
@@ -218,9 +216,9 @@
 	       	</table>
 	       
 	       <div class="offset3">
-				<a ng-disabled="isRedirectToDalpay" ng-click="cancelPaymentFun()"  class="btn">Cancel</a> 
+				<a ng-disabled="isRedirectToDalpay" ng-click="cancelPaymentFun()"  class="btn">{{'btn.cancel' | translate}}</a> 
 				<a href="{{paymentDalpayURL}}" ng-click="makePaymentFun()" 
-					ng-disabled="isRedirectToDalpay" class="btn btn-primary animated fadeInUp">Make Payment</a>
+					ng-disabled="isRedirectToDalpay" class="btn btn-primary animated fadeInUp">{{'btn.make.payment' | translate}}</a>
 				
 			</div> 
 			 
@@ -234,27 +232,27 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 		<fieldset class="animated bounce">
-			<h3 style="padding-left:50px;">Subscription Page</h3>
+			<h3 style="padding-left:50px;">{{'label.subscription.page'|translate}}</h3>
 	 	 <div class="row paddedleft" style="margin-left:200px;">
 			<table width="100%">
 				<tr>
-					<td width="30%"><strong>Package Name</strong></td>
+					<td width="30%"><strong>{{'header.package.name'|translate}}</strong></td>
 					<td width="70%" class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planName}}</td>
 				</tr>
 				<tr>
-					<td><strong>Contract Period<s/trong></td>
+					<td><strong>{{'header.contract.period'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{duration}}</td>
 				</tr>
 				<tr>
-					<td><strong>Price</strong></td>
+					<td><strong>{{'header.price'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planAmount}}</td>
 				</tr>
 				
 			</table>
 			</div><br/>
 	       <div class="offset3">
-				<a ng-click="cancelPaymentFun()"  class="btn">Cancel</a> 
-				<a ng-click="finishBtnFun()" class="btn btn-primary animated fadeInUp">Subscribe</a>
+				<a ng-click="cancelPaymentFun()"  class="btn">{{'btn.cancel' | translate}}</a> 
+				<a ng-click="finishBtnFun()" class="btn btn-primary animated fadeInUp">{{'btn.subscribe' | translate}}</a>
 			</div> 
 			 
 		</fieldset>
