--- a/myaccount/selfcare_module/views/clients/changepassword.html
+++ b/myaccount/selfcare_module/views/clients/changepassword.html
@@ -1,7 +1,7 @@
 <div ng-controller="ChangePasswordController">
 	<div>
 		<ul class="breadcrumb">
-			<li class="active">Change Password</li>
+			<li class="active">{{'label.change.password'|translate}}</li>
 		</ul>
 	</div>
 	<div class="loading-widget-div" data-ng-show="blockUI">
@@ -33,12 +33,12 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	<fieldset>
-		<legend>Change Password</legend>
+		<legend>{{'label.change.password'|translate}}</legend>
 		<table width="100%">
 			<tr>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="priority">New Password<span class="required">*</span></label>
+						<label class="control-label" for="priority">{{'label.new.password'|translate}}<span class="required">*</span></label>
 						<div class="controls">
 							<input type="password" id="pwd" name=password ng-model="pwdData.newPassword" ng-change="passwordCheck()" required  late-Validate/>
 						</div>
@@ -48,11 +48,11 @@
 			<tr>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="priority">Confirm Password<span class="required">*</span></label>
+						<label class="control-label" for="priority">{{'label.confirm.password'|translate}}<span class="required">*</span></label>
 						<div class="controls">
 							<input type="password" id="re-pwd" name=re-password ng-model="pwdData.confirmPassword" ng-change="passwordCheck()" required  late-Validate/>
 							<div ng-show="retype_pwd_valid">
-			        			<small class="error" >Password didnot Match !</small>
+			        			<small class="error" >{{'form.error.password.match'|translate}}</small>
 			    			</div>
 						</div>
 					</div>
@@ -60,8 +60,8 @@
 			</tr>
 		</table>	
 		<div class="offset3">
-			<a id="cancel" href="#/profile"><button type="reset" class="btn">Cancel</button></a>
-			<button id="submit" type="submit" ng-disabled="!changePwdForm.$valid" class="btn btn-primary">Save</button>
+			<a id="cancel" href="#/profile"><button type="reset" class="btn">{{'btn.cancel' | translate}}</button></a>
+			<button id="submit" type="submit" ng-disabled="!changePwdForm.$valid" class="btn btn-primary">{{'btn.save' | translate}}</button>
 		</div>
 	</fieldset>
 </form>
