--- a/myaccount/selfcare_module/views/clients/eventdetailspreviewscreen.html
+++ b/myaccount/selfcare_module/views/clients/eventdetailspreviewscreen.html
@@ -3,7 +3,7 @@
 	<div data-ng-show="blockUI">
 		<div class="alert alert-info animated pulse" role="alert">
 			<img style="margin-left:400px;" alt="Loading.." ng-src="./selfcare_module/images/loader_circle.gif" width="20px"/>
-         	<strong>Please Wait..</strong>
+         	<strong>{{'label.pleasewait'|translate}}</strong>
 		</div>
         <!-- <div id="circularG">
             <div id="circularG_1" class="circularG">
