--- a/myaccount/selfcare_module/views/clients/newTicket.html
+++ b/myaccount/selfcare_module/views/clients/newTicket.html
@@ -1,8 +1,8 @@
 <div ng-controller="CreateTicketController">
 	<div>
 		<ul class="breadcrumb">
-			<li><a href="#/tickts">Tickets</a> <span class="divider">/</span></li>
-			<li class="active">Create Ticket</li>
+			<li><a href="#/tickts">{{'link.tickets' | translate}}</a> <span class="divider">/</span></li>
+			<li class="active">{{'label.creatticket' | translate}}</li>
 		</ul>
 	</div>
 <form name="createticketform" class="form-horizontal well"  ng-submit="submit()">
@@ -13,12 +13,12 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	<fieldset>
-		<legend>Create New Ticket</legend>
+		<legend>{{'label.creatticket' | translate}}</legend>
 		<table width="100%">
 			<tr>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="Date">Ticket Date</label>
+						<label class="control-label" for="Date">{{'label.ticket.date' | translate }}</label>
 						<div class = "controls">
 							 <input type="text" datepicker-pop="dd MMMM yyyy" ng-model="start.date" is-open="opened" min="minDate" max="maxDate" 
 							 date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
@@ -27,7 +27,7 @@
 				</td>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="priority">Priority<span class="required">*</span></label>
+						<label class="control-label" for="priority">{{'label.ticket.priority' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							<select name="priority" ng-model="formData.priority"
 								ng-options="priorityType.value as priorityType.value for priorityType in priorityTypes"
@@ -40,7 +40,7 @@
 			<tr>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="Category">Category<span class="required">*</span></label>
+						<label class="control-label" for="Category">{{'label.ticket.category' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							<select name="category" ng-model="formData.problemCode"
 								ng-options="problemsData.problemCode as problemsData.problemDescription for problemsData in problemsDatas"
@@ -50,7 +50,7 @@
 				</td>
 				<td width="50%">
 					<div class="control-group">
-						<label class="control-label" for="chargeCode">AssignTo<span class="required">*</span></label>
+						<label class="control-label" for="chargeCode">{{'label.ticket.assignto' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							<select ng-model="formData.assignedTo"
 								ng-options="usersData.id as usersData.userName for usersData in usersDatas"
@@ -64,7 +64,7 @@
 			<tr>
 				<td>
 					<div class="control-group">
-            			<label class="control-label" for="sourceData">Source</label>
+            			<label class="control-label" for="sourceData">{{ 'label.source' | translate }}</label>
             			<div class="controls">
               				<select ng-model="formData.sourceOfTicket"  ng-options="sourcedata.mCodeValue as sourcedata.mCodeValue for sourcedata in sourceData" value="{{sourcedata.mCodeValue}}">
              				</select>
@@ -75,7 +75,7 @@
 				
 				<td>
 					<div class="control-group">
-                        <label class="control-label">Due Time</label>
+                        <label class="control-label">{{ 'label.due.time' | translate }}</label>
                         <div class="controls">
                             <input type="text" id="preferredCallingTime" min="minDate" datepicker-pop="dd MMMM yyyy" ng-model="first.date"  style="width:130px;background-color:#FFFFFF;" />
                             		 
@@ -86,10 +86,10 @@
 				</td>
 			</tr>
 			</table>
-				<center><i>Please provide as much detail as possible so we can best assist you.</i><span class="required">*</span></center>
+				<center><i>{{ 'label.ticket.tooltip.description' | translate }}</i><span class="required">*</span></center>
 		
 					<div class="control-group">
-						<label class="control-label" for="description">Description<span class="required">*</span></label>
+						<label class="control-label" for="description">{{ 'label.ticket.description' | translate }}<span class="required">*</span></label>
 						<div class="controls">
 							    <textarea ng-model="formData.description" name="description" style="width:92%; height:8em;" required late-Validate></textarea>
 						</div>
@@ -97,8 +97,8 @@
 				
 
 		<div class="pull-right">
-			<a id="cancel" href="#/tickets"><button type="reset" class="btn">Cancel</button></a>
-			<button id="submit" type="submit" ng-disabled="!createticketform.$valid" class="btn btn-primary">Save</button>
+			<a id="cancel" href="#/tickets"><button type="reset" class="btn">{{'btn.cancel' | translate}}</button></a>
+			<button id="submit" type="submit" ng-disabled="!createticketform.$valid" class="btn btn-primary">{{'btn.save' | translate}}</button>
 		</div>
 	</fieldset>
 </form>
