--- a/myaccount/selfcare_module/views/clients/renewalorder.html
+++ b/myaccount/selfcare_module/views/clients/renewalorder.html
@@ -1,30 +1,29 @@
 <div ng-controller="RenewalOrderController">
 <br/>
-<br/>
-<h2 style="color:#00ff00;">Renewal Order</h2>
+<h2 style="color:#000000;">{{'link.renewal.order'|translate}}</h2>
 <div ng-show="isOrderPage">
-	<span class="animated wobble" style="margin-left:250px;">Package Selection</span>
-	<span style="margin-left:240px;">Payment</span><br/>
-	<img class="animated wobble" style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
+	<span class="animated wobble" style="margin-left:250px;">{{'header.package.selection'|translate}}</span>
+	<span style="margin-left:240px;">{{'header.payment'|translate}}</span><br/>
+	<img class="animated wobble" style="margin-left:280px;" alt="{{'header.package.selection'|translate}}" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
+	<img style="margin-left:280px;" alt="{{'header.payment'|translate}}" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
 	<img class="animated pulse" style="margin-left:290px;margin-top:-28px" alt="ok" src="./selfcare_module/images/checkbox.png" width="40px;">
 </div>
 <div ng-show="isPaymentPage">
-	<span style="margin-left:250px;">Package Selection</span>
-	<span class="animated wobble" style="margin-left:240px;">Payment</span><br/>
-	<img style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
-	<img class="animated wobble" style="margin-left:280px;" alt="Registration" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
+	<span style="margin-left:250px;">{{'header.package.selection'|translate}}</span>
+	<span class="animated wobble" style="margin-left:240px;">{{'header.payment'|translate}}</span><br/>
+	<img style="margin-left:280px;" alt="{{'header.package.selection'|translate}}" src="./selfcare_module/images/Subscribe.jpg" width="60px;">
+	<img class="animated wobble" style="margin-left:280px;" alt="{{'header.payment'|translate}}" src="./selfcare_module/images/Payment.jpg" width="60px;"><br/>
 	<img class="animated pulse" style="margin-left:630px;margin-top:-28px" alt="ok" src="./selfcare_module/images/checkbox.png" width="40px;">
 </div>
 <div ng-show="isRedirectToDalpay">
 <div class="alert alert-info animated pulse" role="alert">
 	<img style="margin-left:400px;" alt="Loading.." ng-src="./selfcare_module/images/loader_circle.gif" width="20px"/>
-         <strong> Redirecting To dalpay</strong>
+         <strong>{{'title.redirecting.dalpay'|translate}}</strong>
 		</div>
 </div>
       <div ng-show="isOrderPage">
 	        <div class="animated bounce">
-	       	<h3>Packages</h3>
+	       	<h3>{{'header.packages'|translate}}</h3>
 	      		<div  style="margin-left:50px;">
 		      <tabset  type="pills">
 			    <tab heading="{{plansData.planCode}}">
@@ -32,10 +31,10 @@
 			    	<div class="cust-body animated fadeInUp">
 			    		<span style="color:#0088cc;font-size:2.5em;">{{contractData.duration}}</span>
 			    		<span class="pull-right">
-			    			<sup class="sup animated pulse">Rs.</sup>
+			    			<sup class="sup animated pulse">{{'symbol.price'|translate}}</sup>
 			    			<span class="dollars animated pulse">{{contractData.price}}</span>
 			    			<a class="btn btn-primary cust-btn animated swing" 
-			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">Book Order</a>
+			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">{{'label.book.order'|translate}}</a>
 			    		</span>
 			    	 </div>
 			    </div>
@@ -44,7 +43,7 @@
 		    </div> 
 		   </div>
 		   <div class="pull-left">
-		    <a id="cancel" href='#/vieworder/{{orderId}}/{{formData.clientId}}'><button type="reset" class="btn">Cancel</button></a>
+		    <a id="cancel" href='#/vieworder/{{orderId}}/{{formData.clientId}}'><button type="reset" class="btn">{{'btn.cancel' | translate}}</button></a>
 		   </div>
 	   </div>
 	<form name="paymentBtnForm" novalidate="" class="form-horizontal well" ng-show="isPaymentPage">
@@ -55,19 +54,19 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 		<fieldset class="animated bounce">
-			<h3 style="padding-left:50px;">Payment Page</h3>
+			<h3 style="padding-left:50px;">{{'label.payment.page'|translate}}</h3>
 			<div class="row paddedleft" style="margin-left:200px;">
 			<table width="100%">
 				<tr>
-					<td width="30%"><strong>Package Name</strong></td>
+					<td width="30%"><strong>{{'header.package.name'|translate}}</strong></td>
 					<td width="70%" class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planName}}</td>
 				</tr>
 				<tr>
-					<td><strong>Contract Period<s/trong></td>
+					<td><strong>{{'header.contract.period'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{duration}}</td>
 				</tr>
 				<tr>
-					<td><strong>Price</strong></td>
+					<td><strong>{{'header.price'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planAmount}}</td>
 				</tr>
 				
@@ -78,7 +77,7 @@
 	       			<td>
             			<div class="control-group">
             				<div class="controls">
-            					<input type="radio" name="selectType" checked/>&nbsp;Dalpay
+            					<input type="radio" name="selectType" checked/>&nbsp;{{'label.dalpay'|translate}}
             				</div>
         				 </div>
 	         				 
@@ -87,9 +86,9 @@
 	       	</table>
 	       
 			<div class="offset3">
-				<a ng-disabled="isRedirectToDalpay" ng-click="cancelPaymentFun()"  class="btn">Cancel</a> 
+				<a ng-disabled="isRedirectToDalpay" ng-click="cancelPaymentFun()"  class="btn">{{'btn.cancel' | translate}}</a> 
 				<a href="{{paymentDalpayURL}}" ng-click="makePaymentFun()" 
-					ng-disabled="isRedirectToDalpay" class="btn btn-primary animated fadeInUp">Make Payment</a>
+					ng-disabled="isRedirectToDalpay" class="btn btn-primary animated fadeInUp">{{'btn.make.payment' | translate}}</a>
 			</div> 
 		</fieldset>
 	</form>
@@ -101,27 +100,27 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 		<fieldset class="animated bounce">
-			<h3 style="padding-left:50px;">Subscription Page</h3>
+			<h3 style="padding-left:50px;">{{'label.subscription.page'|translate}}</h3>
 	 	 <div class="row paddedleft" style="margin-left:200px;">
 			<table width="100%">
 				<tr>
-					<td width="30%"><strong>Package Name</strong></td>
+					<td width="30%"><strong>{{'header.package.name'|translate}}</strong></td>
 					<td width="70%" class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planName}}</td>
 				</tr>
 				<tr>
-					<td><strong>Contract Period<s/trong></td>
+					<td><strong>{{'header.contract.period'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{duration}}</td>
 				</tr>
 				<tr>
-					<td><strong>Price</strong></td>
+					<td><strong>{{'header.price'|translate}}</strong></td>
 					<td class="animated pulse" style="color:#0088cc;font-size:1.5em;">:&nbsp;{{formData.planAmount}}</td>
 				</tr>
 				
 			</table>
 			</div><br/>
 	       <div class="offset3">
-				<a ng-click="cancelPaymentFun()"  class="btn">Cancel</a> 
-				<a ng-click="finishBtnFun()" class="btn btn-primary animated fadeInUp">Subscribe</a>
+				<a ng-click="cancelPaymentFun()"  class="btn">{{'btn.cancel' | translate}}</a> 
+				<a ng-click="finishBtnFun()" class="btn btn-primary animated fadeInUp">{{'btn.subscribe' | translate}}</a>
 			</div> 
 			 
 		</fieldset>
