--- a/myaccount/selfcare_module/views/clients/signupform.html
+++ b/myaccount/selfcare_module/views/clients/signupform.html
@@ -1,17 +1,18 @@
-  <div id="animated-example2" class="animated bounceIn" ng-controller="SignUpFormController">
-   		<h2 style="color:#000000"><strong>Sign Up</strong></h2><hr>
+ <div ng-controller="SignUpFormController">
+  <div id="animated-example2" class="row paddedbottom pull-right border-box-shape animated bounceIn" >
+   		<h2 style="color:#000000"><strong>{{'label.signup' | translate}}</strong></h2><hr>
    		<div class="alert alert-danger animated tada" role="alert" data-ng-show="emptySignUpCredentials">
- 		 		<strong>Please fill Email Field..</strong>
+ 		 		<strong>{{'title.fill.emailid' | translate}}</strong>
  		 	</div>
    		 <table>
    		    <tr>
 			 <td><i class="icon-user"></i></td>
 			 <td><input id="emailId" ng-autofocus="true" type="email" ng-model="signUpCredentials.userName" class="input-xtra-large" 
-						ng-disabled="isProcessing" placeholder="Email" required></td>
+						ng-disabled="isProcessing" placeholder="{{'label.email' | translate}}" required></td>
 			</tr>
 	      </table><br/><br/>
 	      <div ng-hide="isProcessing">
-          	<button class="btn btn-primary pull-right btn-xtra-styles" ng-click="signUpBtnFun()">{{ 'btn.signin' | translate }}</button>
+          	<!-- <button class="btn btn-primary pull-right btn-xtra-styles" ng-click="signUpBtnFun()">{{ 'btn.signin' | translate }}</button> -->
           	<button class="btn btn-success pull-right btn-xtra-styles" ng-click="submitEmail()">{{ 'btn.signup' | translate }}</button>
           </div>
           <div class="btn pull-right" style="color:#000000;padding:5px;" ng-show="isProcessing">{{'label.pleasewait' | translate}}
@@ -24,18 +25,19 @@
 			<img alt="Loading" ng-show="isProcessing" ng-src="./selfcare_module/images/loader.gif" width="20px"/>
 		</span> -->
 	</div>
+	<div class="pull-right"  ng-click="signUpBtnFun()" ng-hide="isProcessing">{{'label.already.auser' | translate}}<a>{{ 'btn.signin' | translate }}</a></div>
+</div>
 	<script type="text/ng-template" id="successpopup.html">
                     
                     <div class="modal-body modal-small" style="padding:25px 0px 0px 35px;">
                        	<div class="control-group">
 							<div class="controls">
-						 	   Thank you for registering! A conformation mail has sent to <a>{{mailId}}</a>.
-								 Please click on the Activation Link <br>to activate your account 
+						 	   {{'title.conformation.registration' | translate}}<br/>{{'title.toactive.msg' | translate}} 
 							</div>	
 						</div>
                     </div>
                     <div class="modal-footer">
-                        <a id="submit" class="btn btn-primary" href="http://www.gmail.com" ng-click="reject()">{{'btn.done' | translate}}</a>
+                        <a id="submit" class="btn btn-primary" href="http://www.gmail.com" target="_blank" ng-click="reject()">{{'btn.done' | translate}}</a>
                     </div>
       </script>
       <script type="text/ng-template" id="alredyexistpopup.html">
@@ -43,8 +45,8 @@
                     <div class="modal-body modal-small" style="padding:25px 0px 0px 35px;">
                        	<div class="control-group">
 							<div class="controls">
-							   Client is already Registered with this <a>{{mailId}}</a>.<br/>
-							   Please Sign In..!
+							   {{'title.conformation.alreadyregistration' | translate}}<br/>
+							   {{'title.signin.msg' | translate}}
 							</div>	
 						</div>
                     </div>
