--- a/myaccount/selfcare_module/views/clients/statements.html
+++ b/myaccount/selfcare_module/views/clients/statements.html
@@ -1,19 +1,19 @@
 <div ng-controller="StatementsController">
 	<div>
 	    <ul class="breadcrumb">
-	        <li class="active">Statements</li>
+	        <li class="active">{{'link.statements'|translate}}</li>
 	    </ul>
     </div><br/>
  	<div class="row-fluid">
-		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Filter by Id">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="{{'placeholder.filter.statement'|translate}}">
 		
 		<table class="table">
 	        <thead>
 	             <tr class="graybg">
-	                <th>Id</th>
-	                <th>Bill Date</th>
-	                <th>Due Date</th>
-	                <th>amount</th>
+	                <th>{{'table.header.statement.id'|translate}}</th>
+	                <th>{{'table.header.statement.billdate'|translate}}</th>
+	                <th>{{'table.header.statement.duedate'|translate}}</th>
+	                <th>{{'table.header.statement.amount'|translate}}</th>
             	</tr>
 	        </thead>
 	        <tbody>
