--- a/myaccount/selfcare_module/views/clients/tickets.html
+++ b/myaccount/selfcare_module/views/clients/tickets.html
@@ -23,25 +23,25 @@
 
 	<div>
 	    <ul class="breadcrumb">
-	        <li class="active">Tickets</li>
+	        <li class="active">{{'link.tickets'|translate}}</li>
 	    </ul>
     </div>
  	<div class="row-fluid">
  		<div class="pull-right">
-			<a href="#/newTicket/{{clientId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add New Ticket</a>
+			<a href="#/newTicket/{{clientId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>{{'label.ticket.add.newticket'|translate}}</a>
 		</div>
-		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Filter by ID">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="{{'placeholder.filter.ticket'|translate}}">
 		<br/>
 		<table class="table">
 	        <thead>
 	             <tr class="graybg">
-					<th>Id</th>
-			        <th>Priority</th>
-			        <th>Date</th>
-			        <th>ProblemCode</th>
-			        <th>Status</th>
-			        <th>AssignTo</th>
-			        <th>LastComment</th>
+					<th>{{'table.header.ticket.id'|translate}}</th>
+					<th>{{'table.header.ticket.priority'|translate}}</th>
+					<th>{{'table.header.ticket.date'|translate}}</th>
+					<th>{{'table.header.ticket.problemCode'|translate}}</th>
+					<th>{{'table.header.ticket.status'|translate}}</th>
+					<th>{{'table.header.ticket.assignto'|translate}}</th>
+					<th>{{'table.header.ticket.lastcomment'|translate}}</th>
 	     		 </tr>
 	        </thead>
 	        <tbody>
