--- a/myaccount/selfcare_module/views/clients/vodevents.html
+++ b/myaccount/selfcare_module/views/clients/vodevents.html
@@ -1,23 +1,23 @@
 <div ng-controller="VODEventsController">
 	<div>
 	    <ul class="breadcrumb">
-	        <li class="active">Events</li>
+	        <li class="active">{{'link.vod'|translate}}</li>
 	    </ul>
     </div>
  	<div class="row-fluid" ng-show="vodEventScreen">
  	<br/>
  		<form ng-submit="search(filterText)" style="margin:0px;">
-		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Search Movie Name">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="{{'placeholder.filter.vod'|translate}}">
 		</form>
 		<table class="table">
 	        <thead>
 	            <tr class="graybg">
-	                <th>Name</th>
-	                <th>Type</th>
-	                <th>Rating</th>
-	                <th>Quality</th>
-	                <th>Price</th>
-	                <th>select</th>
+	                <th>{{'table.header.vod.name'|translate}}</th>
+	                <th>{{'table.header.vod.type'|translate}}</th>
+	                <th>{{'table.header.vod.rating'|translate}}</th>
+	                <th>{{'table.header.vod.quality'|translate}}</th>
+	                <th>{{'table.header.vod.price'|translate}}</th>
+	                <th>{{'table.header.vod.select'|translate}}</th>
 	            </tr>
 	        </thead>
 	        <tbody>
@@ -33,23 +33,23 @@
 	        </tbody>
 	    </table>
 	    <div class="pull-right">
-				<button  ng-click="checkOutFun()" class="btn btn-primary animated pulse">Check Out</button>
+				<button  ng-click="checkOutFun()" class="btn btn-primary animated pulse">{{'btn.checkout'|translate}}</button>
 		</div> 
 	</div>
 	<div class="row-fluid" ng-show="eventDetailsPreview">
-		<h3> For Conformation</h3>
+		<h3>{{'label.vod.conformation'|translate}}</h3>
 		<div ng-show="vodEventRedirectToDalpay">
 			<div class="alert alert-info animated pulse" role="alert">
 				<img style="margin-left:400px;" alt="Loading.." ng-src="./selfcare_module/images/loader_circle.gif" width="20px"/>
-			         <strong> Redirecting To dalpay</strong>
+			         <strong> {{'title.redirecting.dalpay'|translate}}</strong>
 			</div>
 		</div>
 		<table class="table">
 	        <thead>
 	            <tr class="graybg">
-	                <th>Event Name</th>
-	                <th>Quality</th>
-	                <th>Price</th>
+	                <th>{{'table.header.vod.eventname'|translate}}</th>
+	                <th>{{'table.header.vod.quality'|translate}}</th>
+	                <th>{{'table.header.vod.price'|translate}}</th>
 	            </tr>
 	        </thead>
 	        <tbody>
@@ -61,11 +61,11 @@
 	        </tbody>
 	    </table>
 	   <br/>
-	   <span style="color:#0088cc;font-size:20px;" class="pull-left">Total</span>
+	   <span style="color:#0088cc;font-size:20px;" class="pull-left">{{'label.amount.total'|translate}}</span>
 	   <span style="font-size:20px;" class="pull-right">{{totalAmount}}</span><br/><br/>
 		<div class="pull-right" >
-				<a ng-disabled="vodEventRedirectToDalpay"  ng-click="cancelDalpayBtnFun()" class="btn" >Cancel</a>
-				<a href="{{URLForDalpay}}" ng-click="dalpayBtnFun()" ng-disabled="vodEventRedirectToDalpay" class="btn btn-primary animated fadeInUp">Dalpay</a>
+				<a ng-disabled="vodEventRedirectToDalpay"  ng-click="cancelDalpayBtnFun()" class="btn" >{{'btn.cancel'|translate}}</a>
+				<a href="{{URLForDalpay}}" ng-click="dalpayBtnFun()" ng-disabled="vodEventRedirectToDalpay" class="btn btn-primary animated fadeInUp">{{'btn.dalpay'|translate}}</a>
 		</div> 
 	</div>
 </div>
